[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tqsl_helper_IsseBisse"
version = "0.0.1"
authors = [
  { name="Isak Liljequist", email="isak.liljequist@gmail.com" },
]
description = "A small T-SQL helper package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IsseBisse/tsql-helper"
"Bug Tracker" = "https://github.com/IsseBisse/tsql-helper/issues"